--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -9,6 +9,8 @@ resources.frontController.controllerDirectory = APPLICATION_PATH "/controllers"
 resources.frontController.params.displayExceptions = 0
 autoloaderNamespaces.rest = "MyRest_"
 
+user_alegrapi = //USUARIO DE LA API
+pwd_alegrapi = //PASSWORD DE LA API
 
 [staging : production]
 
